Fix 'about' section spacing

--- a/src/ControlPanel.css
+++ b/src/ControlPanel.css
@@ -2,6 +2,7 @@
 
 .controlWrapper {
     padding: 15px;
+    margin-bottom: 50px;
 }
 
 h3 {
